@@ -1,3 +1,10 @@
+2015-11-27  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>
+
+	* data/profile/euclid.csh: fix the cleanup of the banner
+	* data/profile/euclid.sh: 
+	- fix the cleanup of the banner
+	- fix the shell setup for bash
+	
 2015-11-26  Hubert Degaudenzi  <Hubert.Degaudenzi@unige.ch>
 
 	* runtests.py: New file. This file can be generated with
